--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,4 +5,14 @@
 @import "../sass/components/section";
 @import "../sass/utils/body";
 @import "../sass/components/logo-header";
-@import "../sass/components/navigation-header"
+@import "../sass/components/navigation-header";
+@import "../sass/layout/header";
+@import "../sass/layout/hero__background";
+@import "../sass/layout/section__under_background";
+@import "../sass/components/link";
+@import ".//components/hover__transition";
+@import "../sass/layout/what__we__do";
+@import "../sass/utils/second__heading";
+@import "../sass/layout/our__crew";
+@import "../sass/layout/clients";
+@import "../sass/layout/footer";
