--- a/css/main.css
+++ b/css/main.css
@@ -70,4 +70,510 @@ body {
 .navigation {
   display: flex;
 }
+
+.heading .container {
+  display: flex;
+  align-items: center;
+}
+
+.heading {
+  border-bottom: 1px solid var(--header-underline-border);
+}
+
+.navigation-logo {
+  font-family: var(--secondary-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.192;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  color: var(--main-color);
+  margin-right: 93px;
+  padding: 24px 0px 25px;
+}
+
+/* ============ LOGO COLOR IN HEADER =========== */
+.header-logo {
+  color: var(--black-color);
+}
+
+.navigation {
+  display: flex;
+}
+
+.nav-link:not(:last-child) {
+  display: block;
+  margin-right: 46px;
+}
+
+.nav-link-item,
+.mail-address {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.142;
+  letter-spacing: 0.02em;
+  color: var(--black-color);
+}
+
+.phone-number,
+.mail-address {
+  color: var(--address-color);
+  display: inline;
+  align-items: center;
+}
+
+.nav-link-item:hover,
+.nav-link-item:focus,
+.mail-address:hover,
+.mail-address:focus,
+.phone-number:hover,
+.phone-number:focus {
+  color: var(--main-color);
+}
+
+.icon {
+  margin-right: 10px;
+}
+
+.icon-mail,
+.icon-phone {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: var(--address-color);
+}
+
+.icon-mail:hover,
+.icon-mail:focus,
+.icon-phone:hover,
+.icon-phone:focus,
+.icon:hover,
+.icon:focus {
+  fill: var(--main-color);
+}
+
+.icon-mail {
+  margin-left: 345px;
+}
+
+.icon-phone {
+  margin-left: 30px;
+}
+
+.active {
+  display: block;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.142;
+  letter-spacing: 0.02em;
+  color: var(--main-color);
+  margin-top: 32px;
+}
+
+.active::after {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 4px;
+  background: #2196F3;
+  border-radius: 2px;
+  margin-top: 28px;
+}
+
+.main-section {
+  padding: 200px 0 200px 0;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  height: 600px;
+  background-image: url(../Images/Img-background.jpg);
+  background-repeat: no-repeat;
+  background-size: 1600px;
+  background-position: center;
+}
+
+.description-box {
+  padding-top: 90px;
+  justify-content: space-evenly;
+  flex-basis: calc(100% / 4 -30px);
+  display: flex;
+}
+
+.description-list {
+  padding-right: 30px;
+  list-style-type: none;
+  width: 270px;
+}
+
+.icon-box {
+  width: 270px;
+  height: 120px;
+  background-color: var(--background-team);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  background: var(--crew-background);
+}
+
+.description-name {
+  margin-bottom: 10px;
+}
+
+.description-name {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.142;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--black-color);
+}
+
+.description-text {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--address-color);
+}
+
+.link {
+  text-decoration: none;
+}
+
+.hover-transition {
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.what-we-do {
+  text-align: center;
+}
+
+.second-heading {
+  margin-bottom: 50px;
+}
+
+.company-work {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.company-work-list {
+  position: relative;
+  overflow: hidden;
+  list-style-type: none;
+}
+
+.company-work-img {
+  width: 370px;
+  height: 294px;
+}
+
+.layer {
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  text-align: center;
+  color: var(--white-color);
+  background: rgba(47, 48, 58, 0.8);
+  bottom: 0;
+  padding: 27px;
+}
+
+.second-heading {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.166;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--black-color);
+}
+
+.section-gallery {
+  padding: 94px 0px;
+  background-color: var(--crew-background);
+  display: block;
+}
+
+.gallery {
+  display: flex;
+  justify-content: center;
+}
+
+.gallery-list {
+  display: block;
+  background-color: var(--white-color);
+  list-style-type: none;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  width: 270px;
+  height: 428px;
+}
+
+.gallery-list:not(:last-child) {
+  margin-right: 30px;
+}
+
+.gallery-photo {
+  width: 270px;
+  height: 260px;
+}
+
+.crew-name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.187;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding-top: 30px;
+  color: var(--black-color);
+}
+
+.member-stand {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.187;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding: 10px 0 16px;
+  color: var(--description-color);
+}
+
+.media {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 16px;
+}
+
+.media-list-icon {
+  display: flex;
+  list-style-type: none;
+}
+
+.media-link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  fill: var(--icon-color);
+  background-color: var(--white-color);
+}
+
+.media-link:hover,
+.media-link:focus {
+  fill: var(--white-color);
+  background-color: var(--main-color);
+}
+
+.media-icon:hover {
+  fill: var(--white-color);
+}
+
+.clients {
+  justify-content: center;
+  display: flex;
+}
+
+.client-list {
+  display: flex;
+  justify-content: center;
+  border: 1px solid var(--border-clients);
+  box-sizing: border-box;
+  border-radius: 4px;
+  width: 170px;
+  height: 92px;
+  list-style-type: none;
+}
+
+.client-list:not(:last-child) {
+  margin-right: 30px;
+}
+
+.client-link {
+  width: 170px;
+  height: 92px;
+  display: flex;
+  fill: var(--icon-color);
+  align-items: center;
+  justify-content: center;
+}
+
+.client-logo {
+  display: flex;
+  align-items: center;
+}
+
+.client-list:hover,
+.client-list:focus {
+  border: 1px solid var(--main-color);
+}
+
+.client-logo:hover,
+.client-logo:focus,
+.client-link:hover,
+.client-link:focus {
+  fill: var(--main-color);
+}
+
+.contact-box {
+  margin-top: 94px;
+  background-color: var(--description-color);
+}
+
+.display-box {
+  display: flex;
+}
+
+.section-footer {
+  padding: 60px 0 60px;
+}
+
+.footer-heading {
+  margin-bottom: 20px;
+}
+
+.contact-list {
+  list-style-type: none;
+}
+
+.contact-list-item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.map-link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--white-color);
+}
+
+.contact-link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--address-color);
+}
+
+.map-link:hover,
+.map-link:focus,
+.contact-link:hover,
+.contact-link:focus {
+  color: var(--main-color);
+}
+
+.media-footer {
+  display: block;
+  text-align: center;
+  justify-content: center;
+  margin-left: 70px;
+}
+
+.heading-footer {
+  display: flex;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  padding-bottom: 20px;
+  color: var(--white-color);
+  margin-top: 72px;
+}
+
+.list-footer {
+  display: inline-block;
+  list-style-type: none;
+}
+
+.link-footer_icon {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  fill: var(--white-color);
+  background-color: var(--media-bgr-footer);
+}
+
+.link-footer_icon:hover,
+.link-footer_icon:focus {
+  background-color: var(--main-color);
+}
+
+.icon-footer {
+  display: flex;
+}
+
+.newsletter {
+  display: flex;
+  padding-top: 72px;
+}
+
+.title-newsletter {
+  display: flex;
+  flex-direction: column;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  padding-bottom: 20px;
+  margin-left: 72px;
+  color: var(--white-color);
+}
+
+.email-newsletter {
+  margin-right: 12px;
+  margin-top: 20px;
+  width: 358px;
+  height: 50px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  padding-left: 16px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.btn-newsletter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  letter-spacing: 0.06em;
+  margin-top: 36px;
+  width: 200px;
+  height: 50px;
+  background: var(--main-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--white-color);
+}
+
+.btn-newsletter:hover,
+.btn-newsletter:focus {
+  cursor: pointer;
+}
+
+.icon-send {
+  fill: var(--white-color);
+  margin-left: 24px;
+}
 /*# sourceMappingURL=main.css.map */
