--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,3 +16,5 @@
 @import "../sass/layout/our__crew";
 @import "../sass/layout/clients";
 @import "../sass/layout/footer";
+@import "../sass/components/modal__window";
+@import "../sass/layout/portfolio__buttons";
