--- a/sass/components/_modal__window.scss
+++ b/sass/components/_modal__window.scss
@@ -159,3 +159,43 @@
     border: none;
 
 }
+
+.order-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    width: 200px;
+    height: 50px;
+    background-color:var(--hover-portfolio);
+    color: var(--white-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    border-radius: 4px;
+    border-style: none;
+    margin: 30px 164px 40px 164px;
+}
+
+.order-btn {
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.order-btn:hover,
+.order-btn:focus {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+     0px 1px 2px rgba(0, 0, 0, 0.08),
+     0px 2px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer; }
+
+.modal-content:focus,
+.modal-comment:focus{
+    border-color: #2196F3;
+    outline: none;
+  }
+
+.modal-content:focus + .modal-icon {
+    fill: var(--main-color);
+}
