--- a/sass/components/_navigation-header.scss
+++ b/sass/components/_navigation-header.scss
@@ -1,3 +1,12 @@
 .navigation {
     display: flex;
 }
+
+.nav-list {
+    display:flex;
+    align-items: center;
+}
+
+.list {
+    list-style: none;
+}
