--- a/sass/layout/_portfolio__buttons.scss
+++ b/sass/layout/_portfolio__buttons.scss
@@ -24,3 +24,21 @@
 .button-list:not(:last-child) {
     margin-right: 8px;
 }
+
+.btn-item {
+font-family:var(--main-font) ;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.625;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--black-color);
+background:var(--crew-background);
+padding: 0px;
+}
+
+.btn-item:hover,
+.btn-item:focus {
+background-color: var(--main-color);
+cursor: pointer;
+}
