--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 @import "../sass/layout/hero__background";
 @import "../sass/layout/section__under_background";
 @import "../sass/components/link";
-@import ".//components/hover__transition";
+@import "../sass/components/hover__transition";
 @import "../sass/layout/what__we__do";
 @import "../sass/utils/second__heading";
 @import "../sass/layout/our__crew";
@@ -18,3 +18,10 @@
 @import "../sass/layout/footer";
 @import "../sass/components/modal__window";
 @import "../sass/layout/portfolio__buttons";
+@import "../sass/layout/portfolio__images";
+@import "../sass/components/main-text";
+@import "../sass/components/main__button";
+@import "../sass/components/contact__header";
+@import "../sass/components/newsletter__button";
+@import "../sass/components/input__email__newsletter";
+@import "../sass/components/media__footer";
