--- a/sass/components/_input__email__newsletter.scss
+++ b/sass/components/_input__email__newsletter.scss
@@ -1,4 +1,4 @@
-.title-newsletter {
+.newsletter-title {
 
    display: flex;
    flex-direction: column;
@@ -12,7 +12,7 @@
     color:var(--white-color);
 }
 
-.email-newsletter {
+.newsletter-email {
     margin-right: 12px;
     margin-top:20px;
     width: 358px;
