--- a/sass/components/_contact__header.scss
+++ b/sass/components/_contact__header.scss
@@ -1,11 +1,12 @@
-.icon {
+.mail-icon,
+.phone-icon {
     margin-right: 10px;
     &:hover,
     &:focus {fill: var(--main-color);}
 }
 
-.icon-mail,
-.icon-phone {
+.mail,
+.phone {
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -15,11 +16,11 @@
 }
 
 
-.icon-mail {
+.mail {
     margin-left: 345px;
 }
 
-.icon-phone {
+.phone {
     margin-left: 30px;
 }
 
@@ -28,5 +29,9 @@
     color:var(--address-color);
     display: inline;
     align-items: center;
+    &:hover,
+    &:focus{
+        color: var(--main-color);
+    }
     
 }
