--- a/sass/components/_logo-header.scss
+++ b/sass/components/_logo-header.scss
@@ -1,4 +1,4 @@
-.navigation-logo{
+.logo{
 font-family: var(--secondary-font);
 font-weight: 700;
 font-size: 26px;
@@ -12,6 +12,6 @@ padding: 24px 0px 25px;
 
 /* ============ LOGO COLOR IN HEADER =========== */
 
-.header-logo {
+.logo-span {
     color: var(--black-color);
 }
