--- a/sass/layout/_portfolio__images.scss
+++ b/sass/layout/_portfolio__images.scss
@@ -7,14 +7,6 @@
     margin: 0;
 }
 
-
-.img-list:hover,
-.img-list:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
-    0px 4px 4px rgba(0, 0, 0, 0.06), 
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .img-list {
     position: relative;
     overflow: hidden;
@@ -23,6 +15,12 @@
     display: block;
     list-style-type: none;
     margin-bottom: 30px;
+    &:hover,
+    &:focus{
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
+        0px 4px 4px rgba(0, 0, 0, 0.06), 
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
 
 .img-list:hover .overlay {
