--- a/sass/layout/_section__under_background.scss
+++ b/sass/layout/_section__under_background.scss
@@ -1,4 +1,4 @@
-.description-box {
+.description {
     padding-top: 90px;
     justify-content: space-evenly;
     flex-basis: calc(100% / 4 -30px);
@@ -11,7 +11,7 @@
     width: 270px;
 }
 
-.icon-box {
+.description-icon-box {
     width: 270px;
     height: 120px;
     background-color: var(--background-team);
