--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -23,12 +23,12 @@ padding: 24px 0px 25px;
     display: flex;
 }
 
-.nav-list-link:not(:last-child) {
+.nav__item:not(:last-child) {
     display: block;
     margin-right: 46px;
 }
 
-.nav-list-item {
+.nav__link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.142;
@@ -48,14 +48,14 @@ padding: 24px 0px 25px;
     letter-spacing: 0.02em;
     color: var(--main-color);
     margin-top: 32px;
-}
 
-.active::after {
+    &::after {
     display: block;
     content: "";
     width: 100%;
     height: 4px;
     background: #2196F3;
     border-radius: 2px;
-    margin-top: 28px;
+    margin-top: 28px;    
+    }
 }
