--- a/sass/layout/_portfolio__buttons.scss
+++ b/sass/layout/_portfolio__buttons.scss
@@ -1,40 +1,38 @@
-.btn-box {
+.btn__list {
     display: flex;
 
 }
 
-.button-list {
-    list-style-type: none;
-
+.btn__list--item {
+    list-style-type: none;  
+&:not(:last-child) {
+    margin-right: 8px;    
+    }
 }
 
-.btn-box {
+.btn__list {
     justify-content: center;
     padding: 94px 0 50px;
 }
 
 
-.btn-item {
+.btn__list--icon {
     width: 93px;
     height: 38px;
     border-radius: 4px;
     border: none;
 }
 
-.button-list:not(:last-child) {
-    margin-right: 8px;
-}
-
-.btn-item {
-font-family:var(--main-font) ;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.625;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--black-color);
-background:var(--crew-background);
-padding: 0px;
+.btn__list--icon {
+    font-family:var(--main-font) ;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.625;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--black-color);
+    background:var(--crew-background);
+    padding: 0px;
 &:hover,
 &:focus{
     background-color: var(--main-color);
