--- a/sass/layout/_portfolio__images.scss
+++ b/sass/layout/_portfolio__images.scss
@@ -2,12 +2,7 @@
     display: flex;
 }
 
-
-.img-list:nth-child(n + 7) {
-    margin: 0;
-}
-
-.img-list {
+.img__list--item {
     position: relative;
     overflow: hidden;
     width: 370px;
@@ -15,19 +10,26 @@
     display: block;
     list-style-type: none;
     margin-bottom: 30px;
-    &:hover,
-    &:focus{
-        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
-        0px 4px 4px rgba(0, 0, 0, 0.06), 
+&:nth-child(n + 7){
+    margin: 0;
+}
+&:hover,
+&:focus{
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
     }
 }
 
-.img-list:hover .overlay {
+.img__list--item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.img__list--item:hover .img__list--overlay {
   transform: translateY(0);
 }
 
-.overlay {
+.img__list--overlay {
     position: absolute;
     display: flex;
     overflow: hidden;
@@ -39,7 +41,7 @@
 }
 
 
-.text-photo {
+.img__list--text {
     position: absolute;
     padding:49px 29px;
     letter-spacing: 0.03em;
@@ -49,23 +51,19 @@
     color: var(--white-color);
 }
 
-.photo-item {
+.img__list--photo {
     position: absolute;
     display: block;
     width: 370px;
     height: 294px;
 }
 
-.img-box {
+.img__list {
     display: flex;
     flex-wrap: wrap;
 }
 
-.img-list:not(:last-child) {
-    margin-right: 30px;
-}
-
-.text-border {
+.img__text {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -76,13 +74,13 @@
 }
 
 
-.img-name {
+.img__text--name {
     width: 322px;
     height: 36px;
     padding-bottom: 4px;
 }
 
-.img-name {
+.img__text--name {
 font-weight: 700;
 font-size: 18px;
 line-height: 2;
@@ -90,12 +88,12 @@ letter-spacing: 0.06em;
 color:var(--black-color);
 }
 
-.function {
+.img__text--function {
     width: 322px;
     height: 30px;
 }
 
-.function {
+.img__text--function {
 font-weight: 400;
 font-size: 16px;
 line-height: 1.875;
