--- a/sass/components/_contact__header.scss
+++ b/sass/components/_contact__header.scss
@@ -1,31 +1,22 @@
-.mail__icon,
-.phone__icon {
+
+.heading__icon {
     margin-right: 10px;
     &:hover,
     &:focus {fill: var(--main-color);}
 }
 
-.mail,
-.phone {
+.heading__item {
     display: inline-flex;
     align-items: center;
     justify-content: center;
     fill:var(--address-color);
     &:hover,
     &:focus {fill: var(--main-color);}
+    &:not(:last-child) {margin-left: 345px;}
+    &:last-child {margin-left: 30px;}
 }
 
-
-.mail {
-    margin-left: 345px;
-}
-
-.phone {
-    margin-left: 30px;
-}
-
-.phone__number,
-.mail__address {
+.heading__contact {
     color:var(--address-color);
     display: inline;
     align-items: center;
